--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,10 @@
                             <pattern>com.google.common.</pattern>
                             <shadedPattern>net.dzikoysk.funnyguilds.libs.com.google.common.</shadedPattern>
                         </relocation>
+                        <relocation>
+                            <pattern>org.apache.logging.log4j.</pattern>
+                            <shadedPattern>net.dzikoysk.funnyguilds.libs.org.apache.logging.log4j.</shadedPattern>
+                        </relocation>
                     </relocations>
                 </configuration>
             </plugin>
