--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -28,6 +28,7 @@ permissions:
     children:
       funnyguilds.vip.items: true
       funnyguilds.vip.rank: true
+      funnyguilds.vip.base: true
 
   funnyguilds.player:
     default: true
