--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,11 @@
             <version>1.0.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.kohsuke</groupId>
+            <artifactId>github-api</artifactId>
+            <version>1.106</version>
+        </dependency>
     </dependencies>
 
     <repositories>
