Use maven-shade jar minimization option
Actually it can shrink the size of our jar by ~50%!

--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,7 @@
                 </executions>
                 <configuration>
                     <finalName>${project.name} ${project.version} (MC 1.8-1.15)</finalName>
+                    <minimizeJar>true</minimizeJar>
                     <relocations>
                         <relocation>
                             <pattern>com.google.common.</pattern>
