Make disabling dummy possible

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -22,6 +22,7 @@ permissions:
       funnyguilds.admin.build: true
       funnyguilds.admin.interact: true
       funnyguilds.admin.notification: true
+      funnyguilds.admin.disabledummy: false
 
   funnyguilds.vip:
     default: op
