Added individual base teleport time for players with vip's permission

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -30,6 +30,7 @@ permissions:
       funnyguilds.vip.items: true
       funnyguilds.vip.rank: true
       funnyguilds.vip.base: true
+      funnyguilds.vip.baseTeleportTime: true
 
   funnyguilds.player:
     default: true
