GH-1156 Protect animals in the guild region (Resolve #1156)

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.panda-lang</groupId>
             <artifactId>panda</artifactId>
-            <version>indev-20.6.6</version>
+            <version>0.1.3-alpha</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.tinylog</groupId>
