--- a/pom.xml
+++ b/pom.xml
@@ -21,26 +21,6 @@
             <version>0.3.4</version>
         </dependency>
         <dependency>
-            <groupId>org.panda-lang</groupId>
-            <artifactId>panda</artifactId>
-            <version>0.2.0-alpha</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.tinylog</groupId>
-                    <artifactId>tinylog-api</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.tinylog</groupId>
-                    <artifactId>tinylog-impl</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.tinylog</groupId>
-                    <artifactId>slf4j-tinylog</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
             <version>3.4.3</version>
@@ -64,6 +44,25 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.14.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.panda-lang</groupId>
+            <artifactId>panda-utilities</artifactId>
+            <version>0.2.0-alpha</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.tinylog</groupId>
+                    <artifactId>tinylog-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.tinylog</groupId>
+                    <artifactId>tinylog-impl</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.tinylog</groupId>
+                    <artifactId>slf4j-tinylog</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -252,7 +251,6 @@
                 </executions>
                 <configuration>
                     <finalName>${project.name} ${project.version} (MC 1.8-1.16.4)</finalName>
-                    <minimizeJar>true</minimizeJar>
                     <relocations>
                         <relocation>
                             <pattern>com.google.common.</pattern>
@@ -267,7 +265,7 @@
                         <filter>
                             <artifact>net.dzikoysk:funnycommands</artifact>
                             <includes>
-                                <include>**</include>
+                                <include>net/dzikoysk/funnycommands/**</include>
                             </includes>
                         </filter>
                         <filter>
