--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,14 +11,20 @@ on:
 
 jobs:
   build:
+    name: "Build with JDK${{ matrix.jdk }}"
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        # Use both LTS releases and latest one
+        jdk: [ 8, 11, 15 ]
+
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+    - name: Set up JDK
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: ${{ matrix.jdk }}
     - name: Build with Maven
       run: mvn -B package --file pom.xml
