GH-1417 Add funnyguilds.guild to default player's permissions (Fixes #1417)

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -56,3 +56,4 @@ permissions:
       funnyguilds.escape: true
       funnyguilds.rankreset: true
       funnyguilds.manage: true
+      funnyguilds.guild: true
