--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -57,3 +57,4 @@ permissions:
       funnyguilds.setbase: true
       funnyguilds.top: true
       funnyguilds.validity: true
+      funnyguilds.war: true
