Do not relocate packages we do not shade
Also, use commons-lang3 instead of commons-lang.

--- a/pom.xml
+++ b/pom.xml
@@ -257,6 +257,9 @@
                         <relocation>
                             <pattern>com.google</pattern>
                             <shadedPattern>net.dzikoysk.funnyguilds.libs.com.google</shadedPattern>
+                            <excludes>
+                                <exclude>com.google.gson.*</exclude>
+                            </excludes>
                         </relocation>
                         <relocation>
                             <pattern>org.apache</pattern>
