GH-1239 Migrate away from diorite-configs-minimal (#1491)
* Migrate away from diorite-configs-minimal

* Update okaeri-configs to 1.5.5, preserve old config look even more

* Fix access modifiers of helper functions in FunnyTelemetry

* Fix saving of MessageConfiguration (transform section sign to ampersand)

* Bump okaeri-configs to 1.6.4

* Bump okaeri-configs to 2.0.0

* Bump okaeri-configs to 2.3.0

* Make use of okaeri-configs built-in enum support

* Merge remote-tracking branch 'origin/master' into new-configs

* Add config validation based on annotations

* Preserve primitive types/wrappers in config without string representation, bump okaeri-configs to 2.5.0

* Change empty lines to empty comments to preserve old look even more

* Match old look of commands section with empty comments, bump okaeri-configs to 2.5.1

* Add missing annotation in the commands section

* Bump okaeri-configs to 2.6.2

* Use new okaeri-configs API to skip temp file when dumping config

* Use OkaeriConfig#saveToString instead of manually creating baos

* Update placeholders link

* Bump okaeri-configs to 2.6.3

--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,14 @@
             <version>3.12.0</version>
         </dependency>
         <dependency>
-            <groupId>org.diorite</groupId>
-            <artifactId>diorite-config-minimal</artifactId>
-            <version>1.2</version>
+            <groupId>eu.okaeri</groupId>
+            <artifactId>okaeri-configs-yaml-bukkit</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.okaeri</groupId>
+            <artifactId>okaeri-configs-validator-okaeri</artifactId>
+            <version>2.7.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -147,6 +152,10 @@
             <id>panda-repository</id>
             <name>Panda Repository</name>
             <url>https://repo.panda-lang.org/</url>
+        </repository>
+        <repository>
+            <id>okaeri-repo</id>
+            <url>https://storehouse.okaeri.eu/repository/maven-public/</url>
         </repository>
         <repository>
             <id>sk89q-repository</id>
@@ -268,6 +277,10 @@
                         <relocation>
                             <pattern>org.slf4j</pattern>
                             <shadedPattern>net.dzikoysk.funnyguilds.libs.org.slf4j</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>eu.okaeri.</pattern>
+                            <shadedPattern>net.dzikoysk.funnyguilds.libs.eu.okaeri.</shadedPattern>
                         </relocation>
                     </relocations>
                     <filters>
