--- a/pom.xml
+++ b/pom.xml
@@ -271,8 +271,12 @@
                             </excludes>
                         </relocation>
                         <relocation>
-                            <pattern>org.apache</pattern>
-                            <shadedPattern>net.dzikoysk.funnyguilds.libs.org.apache</shadedPattern>
+                            <pattern>org.apache.commons.lang3</pattern>
+                            <shadedPattern>net.dzikoysk.funnyguilds.libs.org.apache.commons.lang3</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>org.apache.logging.log4j</pattern>
+                            <shadedPattern>net.dzikoysk.funnyguilds.libs.org.apache.logging.log4j</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>org.slf4j</pattern>
