--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,29 +2,26 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
 name: FunnyGuilds CI
-
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
 jobs:
   build:
     name: "Build with JDK${{ matrix.jdk }}"
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         # Use both LTS releases and latest one
         jdk: [ 8, 11, 16 ]
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK
       uses: actions/setup-java@v1
       with:
         java-version: ${{ matrix.jdk }}
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      run: ./gradlew build
