Create modules and NmsAccessors for all supported minecraft versions.

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,18 @@ rootProject.name = 'FunnyGuilds'
 
 include ":plugin"
 include ":nms:api"
+include ":nms:v1_8R1"
 include ":nms:v1_8R3"
+include ":nms:v1_9R1"
+include ":nms:v1_9R2"
+include ":nms:v1_10R1"
+include ":nms:v1_11R1"
+include ":nms:v1_12R1"
+include ":nms:v1_13R1"
+include ":nms:v1_13R2"
+include ":nms:v1_14R1"
+include ":nms:v1_15R1"
+include ":nms:v1_16R1"
+include ":nms:v1_16R2"
+include ":nms:v1_16R3"
 include ":nms:v1_17R1"
