--- a/nms/v1_17R1/build.gradle
+++ b/nms/v1_17R1/build.gradle
@@ -1,5 +1,7 @@
 dependencies {
     implementation project(":nms:api")
 
+    implementation project(":nms:v1_8R3")
+
     shadow "org.spigotmc:spigot:1.17-R0.1-SNAPSHOT"
 }
