--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
 name: FunnyGuilds CI
 on:
   push:
@@ -13,8 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # Use both LTS releases and latest one
-        jdk: [ 8, 11, 16 ]
+        jdk: [ 16 ]
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK
@@ -24,4 +20,4 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew shadowJar
