--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,15 @@
 plugins {
-    id 'com.github.johnrengelman.shadow' version '5.2.0'
     id 'idea'
+    id 'org.ajoberstar.grgit' version '4.1.0'
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
 allprojects {
+    group = "net.dzikoysk.funnyguilds"
+    version = "4.10.0"
+}
+
+subprojects {
     repositories {
         mavenLocal()
         mavenCentral()
