Hook shadowJar task to the build task

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -64,3 +64,8 @@ shadowJar {
     exclude "org/intellij/lang/annotations/**"
     exclude "org/jetbrains/annotations/**"
 }
+
+jar {
+    enabled = false
+    dependsOn 'shadowJar'
+}
