Update CI badge in README and remove useless exclude from build.gradle

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -41,9 +41,7 @@ dependencies {
     }
     shadow "codecrafter47.bungeetablistplus:bungeetablistplus-api-bukkit:3.4.4"
 
-    shadow("com.sk89q.worldedit:worldedit-bukkit:7.2.5") {
-        exclude group: "com.google.guava", module: "guava"
-    }
+    shadow "com.sk89q.worldedit:worldedit-bukkit:7.2.5"
     shadow "com.sk89q.worldguard:worldguard-bukkit:7.0.5"
 }
 
