Add jar minimization
We're cutting off 2.5MB with this (7.5MB -> 4.9MB), and it probably
would be even more if shadow plugin would support package-based exclusions.

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -70,6 +70,11 @@ shadowJar {
     exclude "org/checkerframework/**"
     exclude "org/intellij/lang/annotations/**"
     exclude "org/jetbrains/annotations/**"
+
+    minimize {
+        exclude(dependency('net.dzikoysk:funnycommands:.*'))
+        exclude(dependency('com.fasterxml.jackson.core:jackson-core:.*'))
+    }
 }
 
 jar {
