--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -31,6 +31,10 @@ dependencies {
     shadow "org.spigotmc:spigot-api:1.16.2-R0.1-SNAPSHOT"
     shadow "org.apache.logging.log4j:log4j-core:2.14.1"
 
+    // kyori component ecosystem 🚀
+    implementation "net.kyori:adventure-platform-bukkit:4.0.0-SNAPSHOT"
+    implementation "net.kyori:adventure-text-minimessage:4.1.0-SNAPSHOT"
+
     // integrations
     shadow("me.clip:placeholderapi:2.10.9") {
         exclude group: "com.google.code.gson", module: "gson"
@@ -63,6 +67,7 @@ shadowJar {
     relocate("com.google", "net.dzikoysk.funnyguilds.libs.com.google") {
         exclude "com.google.gson.**"
     }
+    relocate "net.kyori", "net.dzikoysk.funnyguilds.libs.net.kyori"
     relocate "org.apache.commons.lang3", "net.dzikoysk.funnyguilds.libs.org.apache.commons.lang3"
     relocate "org.apache.logging", "net.dzikoysk.funnyguilds.libs.org.apache.logging"
     relocate "org.slf4j", "net.dzikoysk.funnyguilds.libs.org.slf4j"
