GH-1585 Enable JUnit tests

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ subprojects {
     }
 
     apply plugin: 'java'
+    apply plugin: 'groovy'
     apply plugin: 'com.github.johnrengelman.shadow'
 
     sourceCompatibility = JavaVersion.VERSION_1_8
